<?xml version="1.0"?>
<package>
  <name>funrobo_control</name>
  <version>0.0.0</version>
  <description>Package for controlling Olin FunRobo Simulated Rover</description>

  <maintainer email="yoonyoung.cho@students.olin.edu">Yoonyoung Cho</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/Olin-FunRobo/FunRobo-Simulator</url>
  <author email="yoonyoung.cho@students.olin.edu">Yoonyoung Cho</author>

  <!-- DEPENDENCIES -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <run_depend>ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>

  <run_depend>controller_manager</run_depend>

  <run_depend>diff_drive_controller</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>

  <run_depend>robot_state_publisher</run_depend>

  <run_depend>key_teleop</run_depend>

  <run_depend>robot_localization</run_depend>

</package>
