<?xml version="1.0"?>
<package>
  <name>olin_autonomy</name>
  <version>0.0.0</version>
  <description>The olin_autonomy package</description>

  <maintainer email="yoonyoung.cho@students.olin.edu">jamiecho</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/yycho0108/olin_funrobo</url>
  <author email="yoonyoung.cho@students.olin.edu">Yoonyoung Cho</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
