<?xml version="1.0"?>
<package>
  <name>olin_gazebo</name>
  <version>0.0.0</version>
  <description>Gazebo Package for Olin FunRobo Simulated Rover</description>

  <maintainer email="yoonyoung.cho@students.olin.edu">Yoonyoung Cho</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/yycho0108/olin_funrobo</url>
  <author email="yoonyoung.cho@students.olin.edu">Yoonyoung Cho</author>

  <!-- Build -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>gazebo_msgs</run_depend>

  <!-- Gazebo -->
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_plugins</run_depend>

  <!-- Gazebo -->
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_plugins</run_depend>

  <!-- State Publishers -->
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>

  <!-- Visualization -->
  <run_depend>rviz</run_depend>
  <run_depend>image_view</run_depend>
  <run_depend>rqt_gui</run_depend>

  <!-- Mapping -->
  <run_depend>gmapping</run_depend>
  <run_depend>map_server</run_depend>




  <!-- The export tag contains other, unspecified, tags -->

  <export>
    <!-- Other tools can request additional information be placed here -->
	<gazebo_ros gazebo_model_path="${HOME}/catkin_ws/src/olin_funrobo/olin_gazebo/models"/>
	<gazebo_ros gazebo_media_path="${HOME}/catkin_ws/src/olin_funrobo/olin_gazebo/models"/>
  </export>
</package>
